@@ -4,9 +4,13 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 
 ---------------------------------------------------------------------------------------------------------------------
 V4.0.9:
+[Control Loop]
+* Added: Basic pitch hold mode
+
 [Logic]
 * Added: Ability to allow modes to be selected on the ground (New config required)
 * Added: Third autopilot option
+* Added: Basic pitch hold mode
 * Fixed: Ensure route manager errors do not block ITAF loop
 
 [GUI]
@@ -26,12 +30,14 @@ V4.0.8:
 * Added: Improved flight director pitch calculation
 * Added: Ability to adjust flight director pitch bar when on the ground in takeoff mode
 * Added: T/O roll mode now includes ability to capture current heading
+* Added: Wing level mode replaced with basic roll hold
 * Changed: Tweaked rate scheme slightly
 
 [Logic]
 * Added: Ability to not drive throttle directly with autothrottle
 * Added: More flexible bank limit system with overrides (New config required)
 * Added: T/O roll mode now includes ability to capture current heading
+* Added: Wing level mode replaced with basic roll hold
 * Fixed: Bad behavior when switching on and off true course
 * Changed: Renamed reduc-agl-ft to accel-ft
 * Changed: Renamed togaspd to toga-spd
